--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 
 
         let songs = [
-            { songName: "Butterfly", filePath: "./songs/5.mp3", coverPath: "./coverPath/butterfly.jpeg" },
-            { songName: "Go Go", filePath: "./songs/6.mp3", coverPath: "./coverPath/gogo.jpeg" },
-            { songName: "Dimple", filePath: "./songs/7.mp3", coverPath: "./coverPath/dimple.jpeg" },
-            { songName: "SilverSpoon", filePath: "./songs/8.mp3", coverPath: "./coverPath/silverspoon.jpeg" },
-            { songName: "Butter", filePath: "./songs/9.mp3", coverPath: "./coverPath/bts.png" },
+            { songName: "Butterfly", filePath: "./songs/5.mp3", coverPath: "coverPath/butterfly.jpeg" },
+            { songName: "Go Go", filePath: "./songs/6.mp3", coverPath: "coverPath/gogo.jpeg" },
+            { songName: "Dimple", filePath: "./songs/7.mp3", coverPath: "coverPath/dimple.jpeg" },
+            { songName: "SilverSpoon", filePath: "./songs/8.mp3", coverPath: "coverPath/silverspoon.jpeg" },
+            { songName: "Butter", filePath: "./songs/9.mp3", coverPath: "coverPath/bts.png" },
         ]
         masterplayit.addEventListener('click', () => {
             if (audioElements.currentTime <= 0 || audioElements.paused) {
